--- a/main.css
+++ b/main.css
@@ -368,7 +368,95 @@ footer ul li a:hover{
 	width: 100%;
 	text-align: center;
 }
-/*popup section*/
+/*popup section 	<!-- ------------------------------------------------------------------------------------------------------------------------------ -->*/
+.popup-main{
+	display: block;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+}
+
+.popup-main.show{
+	display: block;
+	z-index: 1000;
+}
+
+.popup-main .blanket{
+	background-color: rgba(0, 0, 0, .7);
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+}
+
+.popup-main .content {
+	width: 960px;
+	height: 540px;
+	box-sizing: border-box;
+	padding: 30px 40px;
+	background-color: white;
+	text-align: center;
+	position: absolute;
+	margin-left: -480px;
+	left: 50%;
+	top: 50%;
+	margin-top: -270px;
+	border-radius: 7px;
+}
+
+.box-1 {
+	width: 425px;
+	height: 200px;
+	position: fixed;
+	border: 5px solid black;
+	top: 175px;
+	left: 320px;
+	box-sizing: border-box;
+}
+
+.box-1 a{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.box-1 h3 {
+
+}
+
+.box-2 {
+	width: 425px;
+	height: 200px;
+	position: fixed;
+	border: 5px solid black;
+	top: 175px;
+	left: 780px;
+	box-sizing: border-box;
+}
+
+.box-2 a{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.box-2 h3 {
+
+}
+
+
+/*	<!-- ------------------------------------------------------------------------------------------------------------------------------ -->*/
 .popup{
 	display: none;
 	position: fixed;
@@ -434,7 +522,7 @@ footer ul li a:hover{
 	background-color: green;
 }
 
-.popup .close{
+.close{
 	width: 	50px;
 	height: 50px;
 	background-color: grey;
