--- a/main.css
+++ b/main.css
@@ -407,13 +407,18 @@ footer ul li a:hover{
 	border-radius: 7px;
 }
 
+.popup-main h3 {
+	font-size: 50px;
+}
 .box-1 {
 	width: 425px;
 	height: 200px;
 	position: fixed;
 	border: 5px solid black;
-	top: 175px;
-	left: 320px;
+	top: 24vh;
+	left: 21vw;
+	right: 0;
+	bottom: 0;
 	box-sizing: border-box;
 }
 
@@ -436,8 +441,8 @@ footer ul li a:hover{
 	height: 200px;
 	position: fixed;
 	border: 5px solid black;
-	top: 175px;
-	left: 780px;
+	top: 24vh;
+	right: 21vw;
 	box-sizing: border-box;
 }
 
@@ -455,6 +460,31 @@ footer ul li a:hover{
 
 }
 
+.box-3 {
+	width: 875px;
+	height: 200px;
+	position: fixed;
+	border: 5px solid black;
+	top: 55vh;
+	left: 21vw;
+	box-sizing: border-box;
+}
+
+.box-3 a{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.box-3 h3 {
+	position: absolute;
+	top: 1vh;	
+	left: 18vw;
+}
 
 /*	<!-- ------------------------------------------------------------------------------------------------------------------------------ -->*/
 .popup{
