--- a/main.css
+++ b/main.css
@@ -370,7 +370,7 @@ footer ul li a:hover{
 }
 /*popup section 	<!-- ------------------------------------------------------------------------------------------------------------------------------ -->*/
 .popup-main{
-	display: block;
+	display: none;
 	position: fixed;
 	top: 0;
 	bottom: 0;
@@ -409,6 +409,7 @@ footer ul li a:hover{
 
 .popup-main h3 {
 	font-size: 50px;
+	color: white;
 }
 .box-1 {
 	width: 425px;
@@ -422,7 +423,7 @@ footer ul li a:hover{
 	box-sizing: border-box;
 }
 
-.box-1 a{
+.box-1 video {
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -430,10 +431,13 @@ footer ul li a:hover{
 	right: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 0;
+	cursor: pointer;
+	object-fit: fill;
 }
-
 .box-1 h3 {
-
+	position: relative;
+	z-index: 5;
 }
 
 .box-2 {
