Made popup main

--- a/main.css
+++ b/main.css
@@ -407,14 +407,6 @@ footer ul li a:hover{
 	border-radius: 7px;
 }
 
-.popup-main h3 {
-	font-size: 50px;
-	color: white;
-	position: fixed;
-	z-index: 3;
-	pointer-events: none;
-}
-
 .box-1 {
 	width: 425px;
 	height: 200px;
@@ -425,10 +417,12 @@ footer ul li a:hover{
 	right: 0;
 	bottom: 0;
 	box-sizing: border-box;
-	transition: 2s;
+	transition: 500ms;
 }
 
-
+.box-1:hover {
+	transform: scale(1.1);
+}
 
 .box-1 video {
 	position: absolute;
@@ -443,11 +437,6 @@ footer ul li a:hover{
 	object-fit: fill;
 }
 
-.box-1 h3 {
-	top: 250px;
-	left: 360px;
-}
-
 .image_border_1 {
 	background-color: white;
 	width: 50px;
@@ -456,6 +445,7 @@ footer ul li a:hover{
 	z-index: 11000;
 	left: 365px;
 	border-radius: 5px;
+	pointer-events: none;
 }
 
 .image_border_1 img {
@@ -476,6 +466,11 @@ footer ul li a:hover{
 	top: 24vh;
 	right: 21vw;
 	box-sizing: border-box;
+	transition: 500ms;
+}
+
+.box-2:hover {
+	transform: scale(1.1);
 }
 
 .box-2 video {
@@ -490,12 +485,6 @@ footer ul li a:hover{
 	cursor: pointer;
 	object-fit: fill;
 }
-
-.box-2 h3 {
-	top: 250px;
-	right: 360px;
-}
-
 .image_border_2 {
 	background-color: white;
 	width: 70px;
@@ -504,6 +493,7 @@ footer ul li a:hover{
 	z-index: 11000;
 	left: 346px;
 	border-radius: 5px;
+	pointer-events: none;
 }
 
 .image_border_2 img {
@@ -523,6 +513,11 @@ footer ul li a:hover{
 	top: 55vh;
 	left: 21vw;
 	box-sizing: border-box;
+	transition: 500ms;
+}
+
+.box-3:hover {
+	transform: scale(1.05);
 }
 
 .box-3 video {
@@ -536,11 +531,6 @@ footer ul li a:hover{
 	z-index: 0;
 	cursor: pointer;
 	object-fit: fill;
-}
-
-.box-3 h3 {
-	bottom: 90px;
-	left: 600px;
 }
 
 .box-3 img {
@@ -560,10 +550,12 @@ footer ul li a:hover{
 	position: relative;
 	z-index: 11000;
 	border-radius: 5px;
+	pointer-events: none;
 }
 
 .image_border_3.pic1 {
 	left: 815px;
+	pointer-events: none;
 }
 
 .image_border_3.pic2 {
